# zkrpc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
config/: Cargo.toml
config/src/: config.rs  error.rs  lib.rs  tests.rs
config/src/config/: base_config.rs  compressor_config.rs  constants.rs  da_layer_config.rs  log_config.rs  mod.rs  p2p_config.rs  pox_config.rs  rpc_config.rs
config/src/config/test_config/: config-for-test-save-load.yaml  config-test.yaml
config/test_config/: config-for-test-save-load.yaml
da-layer/: Cargo.toml
da-layer/src/: error.rs  lib.rs
da-layer/src/mock/: db.rs  error.rs  mod.rs
da-layer/src/mock/models/: ip_packets.rs  mod.rs  p2p.rs  prelude.rs  remote.rs  remote_track.rs  satellite.rs  satellite_track.rs  terminal.rs  terminal_track.rs
da-layer/src/mock/scripts/: gen-entity-from-database.sh
logger/: Cargo.toml
logger/src/: format.rs  layer.rs  lib.rs
logging/: Cargo.toml
logging/src/: lib.rs
p2p/: Cargo.toml
p2p/src/bootstrap/: client.rs  mod.rs  server.rs  tests.rs
pom/: Cargo.toml
pox/: Cargo.toml
pox/src/: lib.rs  tests.rs
pox/src/math/: gaussian.rs  mod.rs  poly.rs
pox/src/math/kernel/: gaussian.rs  kernel.rs  mod.rs
pox/src/math/penalty/: linear.rs  mod.rs  penalty.rs
types/: Cargo.toml
types/src/: error.rs  fixed_point.rs  lib.rs  pos.rs
types/src/endpoints/: error.rs  mod.rs  packets.rs  remote.rs  satellite.rs  terminal.rs
types/src/merkle/: merkle.rs
util/: Cargo.toml
util/src/: blockchain.rs  compressor.rs  lib.rs  os.rs  proj.rs  serde_bin.rs
util/src/go-code/: 25519_test.go  go.mod  go.sum  x25519_test.go
zkrpc/: .gitignore  Cargo.toml  build.rs
zkrpc/proto/: mesh.proto  zkrpc.proto
zkrpc/src/: main.rs
zkrpc/src/mesh_rpc/: mesh_rpc.rs  mod.rs
zkrpc/src/rpc/: client.rs  mod.rs  test_client.rs  zkrpc.rs
zkt/: Cargo.toml
zkt/src/: lib.rs  traits.rs
