[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-serde = "0.1.0"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
log = "0.4.21"
