[package]
name = "da-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
logger = { path = "../logger" }
types = { path = "../types" }
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
sea-query = "0.30.7"
thiserror = "1.0.59"
tokio = "1.37.0"
tracing = "0.1.40"
num-bigint = "0.4.4"
rust_decimal = "1.35.0"
proj = "0.27.2"
