[package]
name = "da-layer"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
logger = { path = "../logger" }
types = { path = "../types" }
util = { path = "../util" }
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "debug-print",
] }
sea-query = "0.30.7"
thiserror = "1.0.59"
tokio = "1.37.0"
tracing = "0.1.40"
num-bigint = "0.4.4"
rust_decimal = "1.35.0"
flat_projection = "0.4.0"
colored = "2.1.0"
hdrhistogram = "7.5.4"
