[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "chrono",
    "ansi",
] }
config = { path = "../config" }
anyhow = "1.0.82"
tracing-appender = "0.2.3"
lazy_static = "1.4.0"
colored = "2.1.0"
color-eyre = "0.6"
nu-ansi-term = "0.50.0"
