[package]
name = "p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "*", features = [
    "identify",
    "macros",
    "noise",
    "ping",
    "rendezvous",
    "tcp",
    "tokio",
    "yamux",
    "autonat",
    "gossipsub",
] }

config = { path = "../config" }
logger = { path = "../logger" }
tracing = "0.1.40"
anyhow = "1.0.83"

tokio = "1.37.0"
