[package]
name = "pox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
config = { path = "../config" }
logger = { path = "../logger" }
da-layer = { path = "../da-layer" }
num-bigint = "0.4.4"
