[package]
name = "pox"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
config = { path = "../config" }
logger = { path = "../logger" }
da-layer = { path = "../da-layer" }
util = { path = "../util" }
num-bigint = { version = "0.4.4", features = ["serde"] }
rust_decimal = "1.35.0"
rayon = "1.10.0"
zkt = { path = "../zkt" }
halo2_proofs = "0.3.0"
num-rational = "0.4.1"
rs_merkle = "1.4.2"
tracing = "0.1.40"
rust_decimal_macros = "1.34.2"
bincode = "1.3.3"
serde = "1.0.200"
hdrhistogram = "7.5.4"
rand = "0.8.5"
hex = "0.4.3"

indicatif = {version = "*", features = ["rayon"]}
