[package]
name = "types"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
num-rational = "0.4.1"
rust_decimal = { version = "1.35.0", features = ["maths"] }
config = { path = "../config" }
logger = { path = "../logger" }
lazy_static = "1.4.0"
tracing = "0.1.40"
thiserror = "1.0.59"
num-traits = "0.2.18"
halo2_proofs = "0.3.0"
halo2curves = "0.6.1"
zkt = { path = "../zkt" }
flat_projection = "0.4.0"
rs_merkle = "1.4.2"
serde = "1.0.199"
hex = "0.4.3"

rust_decimal_macros = "1.34.2"
