[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
num-traits = "0.2.18"
rust_decimal = { version = "1.35.0", features = ["maths"] }
rust_decimal_macros = "1.34.2"
types = { path = "../types" }
config = { path = "../config" }
logger = { path = "../logger" }
brotli = "5.0.0"
flate2 = "1.0.30"
tracing = "0.1.40"
bincode = "1.3.3"
serde = "1.0.199"
# anyhow = "1.0.82"
color-eyre = "0.6.3"
