[package]
name = "zkrpc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.82"
tracing = "0.1.40"
config = { path = "../config" }
logger = { path = "../logger" }
da-layer = { path = "../da-layer" }
pox = { path = "../pox" }
types = { path = "../types" }
zkt = { path = "../zkt" }
num-bigint = { version = "0.4.4", features = ["serde"] }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", version = "0.3" }
bincode = "1.3.3"
hex = "0.4.3"
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.30"
zstd = "0.13.1"
brotli = "5.0.0"

[build-dependencies]
tonic-build = { version = "0.11" }
